--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar background h-nav-resp">
         <ul class="nav-list v-class-resp">
-            <div class="logo"><img src="/images/img.jpeg" alt="logo"></div>
+            <div class="logo"><img src="img.jpeg" alt="logo"></div>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="secondHalf">
-                <img src="/images/img.jpeg" alt="Laptop Image">
+                <img src="img.jpeg" alt="Laptop Image">
             </div>
         </div>
     </section>
