--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/respon.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="respon.css">
     <title>iEducate - Transforming Online Education</title>
 </head>
 
@@ -112,7 +112,7 @@
             Copyright &copy; 2027 - www.iEducate.com - All rights reserved
         </p>
     </footer>
-   <script src="/js/res.js"></script>
+   <script src="res.js"></script>
 
 </body>
 
